# the_cheat_down_under

./: README.md  pyproject.toml
.github/workflows/: docs.yml
data/: activity_links.csv  run-efforts-table.csv
data/run-efforts-table/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  27.html  28.html  29.html  3.html  30.html  31.html  32.html  33.html  34.html  35.html  4.html  5.html  6.html  7.html  8.html  9.html
ideation/: pace_analysis.ipynb  theme.json
src/the_cheat_down_under/: parse.py
src/the_cheat_down_under/utils/: logger.py
tests/: __init__.py
